[package]
name = "wolges-wasm"
version = "0.1.0"
authors = ["Andy Kurnia"]
description = "wolges as wasm"
edition = "2021"
license = "MIT"
repository = "https://github.com/andy-k/wolges-wasm"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
lazy_static = "1.5.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["console"] }
