[package]
name = "wolges-wasm"
version = "0.1.0"
authors = ["Andy Kurnia"]
description = "wolges as wasm"
edition = "2024"
license = "MIT"
repository = "https://github.com/andy-k/wolges-wasm"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
js-sys = "0.3.77"
lazy_static = "1.5.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }
