[package]
name = "wolges-wasm"
version = "0.1.0"
authors = ["Andy Kurnia"]
description = "wolges as wasm"
edition = "2024"
license = "MIT"
repository = "https://github.com/andy-k/wolges-wasm"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = "0.3.80"
lazy_static = "1.5.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = ["console"] }
